add some missing variables to en.json

--- a/languages/en.json
+++ b/languages/en.json
@@ -117,7 +117,7 @@
   "dashboard_profile_title": "Manage Profile",
   "dashboard_profile_username": "Username",
   "dashboard_profile_username_placeholder": "Enter bot name here",
-  "dashboard_server_add_button": "dashboard_server_add_button",
+  "dashboard_server_add_button": "Add to Server",
   "dashboard_server_ai_channels": "AI Chat Channels",
   "dashboard_server_ai_context_limit_desc": "# of messages the bot remembers. (1-50)",
   "dashboard_server_ai_context_limit_label": "Context Limit",
@@ -141,10 +141,10 @@
   "dashboard_server_github_button": "Configure GitHub Monitoring",
   "dashboard_server_github_desc": "Set up detailed notifications for commits, pull requests, issues, and releases from your GitHub repositories.",
   "dashboard_server_github_title": "GitHub Monitoring",
-  "dashboard_server_knowledge_add_button": "dashboard_server_knowledge_add_button",
-  "dashboard_server_knowledge_new_answer_placeholder": "dashboard_server_knowledge_new_answer_placeholder",
-  "dashboard_server_knowledge_new_question_placeholder": "dashboard_server_knowledge_new_question_placeholder",
-  "dashboard_server_knowledge_settings": "dashboard_server_knowledge_settings",
+  "dashboard_server_knowledge_add_button": "Add Knowledge",
+  "dashboard_server_knowledge_new_answer_placeholder": "New Answer",
+  "dashboard_server_knowledge_new_question_placeholder": "New Question",
+  "dashboard_server_knowledge_settings": "Manage Knowledge",
   "dashboard_server_managing_title": "Managing: {serverName}",
   "dashboard_server_music_dj_role": "DJ Role",
   "dashboard_server_music_dj_role_placeholder": "Enter the role name",
