Add the missing variables to en.json
Was too hard to read for leaving it for later...

--- a/dashboard/languages/en.json
+++ b/dashboard/languages/en.json
@@ -49,6 +49,23 @@
   "dashboard_title": "Ubot Dashboard",
   "dashboard_view_servers_button": "View all servers",
   "dashboard_view_stats_button": "View Statistics",
+  "nav_toggle_sidebar": "Collapse",
+  "nav_toggle_sidebar_expand": "Expand",
+  "nav_toggle_sidebar_collapse": "Collapse",
+  "nav_category_main": "Main",
+  "nav_overview": "Overview",
+  "nav_stats": "Statistics",
+  "nav_profile": "Bot Profile",
+  "nav_category_general": "General",
+  "nav_github": "GitHub",
+  "nav_ai_features": "AI Features",
+  "nav_server_stats": "Server Statistics",
+  "nav_music_system": "Music System",
+  "nav_category_community": "Community",
+  "nav_discord": "Discord",
+  "nav_category_system": "System",
+  "nav_logout": "Logout",
+  "err_guild_not_found": "Guild not found.",
   "settings_section_music": "Music",
   "settings_music_djrole": "DJ Role",
   "settings_music_autoplay": "Autoplay",
